--- a/Cozy_Cuisine/Views/Manage/CreditsManagement.cshtml
+++ b/Cozy_Cuisine/Views/Manage/CreditsManagement.cshtml
@@ -1,104 +1,139 @@
 ﻿@model Cozy_Cuisine.ViewModels.CreditsManagementVM
 @{
     Layout = "Admin_Layout";
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Credits";
 }
 @* TEMPORARY CSS LANG DASHBOARD *@
 <link href="~/css/dashboard.css" rel="stylesheet" />
+<div class="pgnamecont2 container mb-3 p-3 rounded-3 shadow">
+    <div class="dashboard fs-3 m-0">Credits Management</div>
+</div>
+
+<div class="container mt-4">
+    <ul class="recentnavtabs nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="recenttabs nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">List</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="recenttabs nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Add</button>
+        </li>
+    </ul>
+    <div class="tab-content mt-3" id="myTabContent">
+        <!--list-->
+        <div class="tab-pane fade show active" id="tab1" role="tabpanel">
+            <div class="container">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Role</th>
+                            <th>GIF URL</th>
+                            <th>Date Added</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @if (Model.Credits != null && Model.Credits.Any())
+                        {
+                            @foreach (var credit in Model.Credits)
+                            {
+
+                                <tr>
+                                    <td>@credit.CreditId</td>
+                                    <td>@credit.Name</td>
+                                    <td>@credit.Role</td>
+                                    <td>@credit.URLGif</td>
+                                    <td>@credit.DateAdded.ToString("MMMM dd, yyyy")</td>
+                                    <td>
+                                        <a asp-action="DetailsCredit" asp-route-id="@credit.CreditId" class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye"></i> View</a>
+
+                                        @* opens a modal popup to make the changes *@
+                                        <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#editCreditsModal"
+                                                data-id="@credit.CreditId"
+                                                data-name="@credit.Name"
+                                                data-role="@credit.Role"
+                                                data-url="@credit.URLGif">
+                                            <i class="fa-solid fa-pen-to-square"></i> Edit
+                                        </button>
+
+                                        <form class="d-inline" id="deleteForm-@credit.CreditId" method="post" asp-action="DeleteCredit" asp-route-id="@credit.CreditId">
+                                            <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1" onclick="confirmDelete(event, 'deleteForm-@credit.CreditId')"><i class="fa-solid fa-trash"></i> Delete</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+
+            </div>
 
 
-<form id="creditsForm" method="post" asp-controller="Manage" asp-action="CreateCredits" onsubmit="confirmSubmit(event)">
-    <div>
-        <label asp-for="NewCredits.Name"></label>
-        <input type="text" asp-for="NewCredits.Name" class="form-control" placeholder="Enter Name" required />
+        </div>
+        <!--add-->
+        <div class="tab-pane fade" id="tab2" role="tabpanel">
+           
+            <div class="formcont container p-4 shadow-sm rounded-3 mb-5">
+                <form id="creditsForm" method="post" asp-controller="Manage" asp-action="CreateCredits" onsubmit="confirmSubmit(event)">
+                    <div>
+                        <label asp-for="NewCredits.Name" class="form-label">Name <span class="reqsymbol">*</span></label>
+                        <input type="text" asp-for="NewCredits.Name" class="form-control mb-3 focus-ring" placeholder="Enter Name" required />
+                    </div>
+                    <div>
+                        <label asp-for="NewCredits.Role" class="form-label">Role <span class="reqsymbol">*</span></label>
+                        <input type="text" asp-for="NewCredits.Role" class="form-control mb-3 focus-ring" placeholder="Enter Role" required />
+                    </div>
+                    <div>
+                        <label asp-for="NewCredits.URLGif" class="form-label">GIF URL</label>
+                        <input type="text" asp-for="NewCredits.URLGif" class="form-control mb-3 focus-ring" placeholder="Enter GIF URL" />
+                    </div>
+
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="addremovebtn focus-ring btn px-3">Submit</button>
+                    </div>
+                </form>
+            </div>
+
+        </div>
+
     </div>
-    <div>
-        <label asp-for="NewCredits.Role"></label>
-        <input type="text" asp-for="NewCredits.Role" class="form-control" placeholder="Enter Role" required />
-    </div>
-    <div>
-        <label asp-for="NewCredits.URLGif"></label>
-        <input type="text" asp-for="NewCredits.URLGif" class="form-control" placeholder="One GIF link only (Optional):" />
-    </div>
+</div>
 
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
 
-<table class="table table-bordered table-hover table-striped">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Role</th>
-            <th>URLGif</th>
-            <th>Date Added</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.Credits != null && Model.Credits.Any())
-        {
-            @foreach (var credit in Model.Credits)
-            {
 
-                <tr>
-                    <td>@credit.CreditId</td>
-                    <td>@credit.Name</td>
-                    <td>@credit.Role</td>
-                    <td>@credit.URLGif</td>
-                    <td>@credit.DateAdded.ToString("MMMM dd, yyyy")</td>
-                    <td>
-                        <a asp-action="DetailsCredit" asp-route-id="@credit.CreditId" class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i>View</a>
-
-                        @* opens a modal popup to make the changes *@
-                        <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1"
-                                data-bs-toggle="modal"
-                                data-bs-target="#editCreditsModal"
-                                data-id="@credit.CreditId"
-                                data-name="@credit.Name"
-                                data-role="@credit.Role"
-                                data-url="@credit.URLGif">
-                            <i class="fa-solid fa-pen-to-square fa-sm"></i>
-                            Edit
-                        </button>
-
-                        <form class="d-inline" id="deleteForm-@credit.CreditId" method="post" asp-action="DeleteCredit" asp-route-id="@credit.CreditId">
-                            <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1" onclick="confirmDelete(event, 'deleteForm-@credit.CreditId')"><i class="fa-solid fa-trash fa-sm"></i>Delete</button>
-                        </form>
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
 
 @* MODAL POPUP FOR EDITING RECORD *@
 <div class="modal fade" id="editCreditsModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header rounded-top-4">
                 <h5 class="modal-title">Edit Credits</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-light" data-bs-dismiss="modal"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body py-3 px-4 rounded-bottom-4">
                 <form id="editCreditsForm" method="post" asp-action="EditCredits">
                     <input type="hidden" id="creditId" name="CreditId">
 
                     <div class="mb-3">
-                        <label class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="Name" required>
+                        <label class="form-label">Name <span class="reqsymbol">*</span></label>
+                        <input type="text" class="form-control focus-ring" id="name" name="Name" required>
                     </div>
 
                     <div class="mb-3">
-                        <label class="form-label">Role</label>
-                        <input class="form-control" id="role" name="Role" required>
+                        <label class="form-label">Role <span class="reqsymbol">*</span></label>
+                        <input class="form-control focus-ring" id="role" name="Role" required>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">URLGif</label>
-                        <textarea class="form-control" id="urlgif" name="URLGif" placeholder="One GIF link only (Optional):"></textarea>
+                        <label class="form-label">GIF URL</label>
+                        <textarea class="form-control focus-ring" id="urlgif" name="URLGif" placeholder="Enter GIF URL"></textarea>
                     </div>
-
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="addremovebtn focus-ring btn px-3">Save Changes</button>
+                    </div>
+                    
                 </form>
             </div>
         </div>
@@ -118,8 +153,10 @@
                         text: "You can always delete or edit the record later.",
                         icon: "warning",
                         showCancelButton: true,
-                        confirmButtonColor: "#3085d6",
-                        cancelButtonColor: "#d33",
+                        background: "#f8f4f1",
+                        color: "#603f26",
+                        confirmButtonColor: "#603f26",
+                        cancelButtonColor: "#8D493A",
                         confirmButtonText: "Yes, submit it!"
                     }).then((result) => {
                         if (result.isConfirmed) {
@@ -138,8 +175,10 @@
                 text: "You won't be able to revert this!",
                 icon: "warning",
                 showCancelButton: true,
-                confirmButtonColor: "#3085d6",
-                cancelButtonColor: "#d33",
+                background: "#f8f4f1",
+                color: "#603f26",
+                confirmButtonColor: "#603f26",
+                cancelButtonColor: "#8D493A",
                 confirmButtonText: "Yes, delete it!"
             }).then((result) => {
                 if (result.isConfirmed) {
