--- a/Cozy_Cuisine/Views/Wiki/CharacterManagement.cshtml
+++ b/Cozy_Cuisine/Views/Wiki/CharacterManagement.cshtml
@@ -1,110 +1,144 @@
 ﻿@model Cozy_Cuisine.ViewModels.CharacterManagementVM
 @{
     Layout = "Admin_Layout";
-    ViewData["Title"] = "Dashboard";
+    ViewData["Title"] = "Characters";
 }
-@* TEMPORARY CSS LANG DASHBOARD *@
+
 <link href="~/css/dashboard.css" rel="stylesheet" />
 
-<form id="characterForm" method="post" asp-controller="Wiki" asp-action="CreateCharacter" onsubmit="confirmSubmit(event)">
-    <div>
-        <label asp-for="NewCharacter.Name"></label>
-        <input type="text" asp-for="NewCharacter.Name" class="form-control" required />
+<div class="pgnamecont2 container mb-3 p-3 rounded-3 shadow">
+    <div class="dashboard fs-3 m-0">Characters</div>
+</div>
+
+<div class="container mt-4">
+    <ul class="recentnavtabs nav nav-tabs" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button class="recenttabs nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">List</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="recenttabs nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Add</button>
+        </li>
+    </ul>
+    <div class="tab-content mt-3" id="myTabContent">
+        <!--list-->
+        <div class="tab-pane fade show active" id="tab1" role="tabpanel">
+            <div class="container">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                        <tr>
+                            <th>Story ID</th>
+                            <th>Name</th>
+                            <th>Character Category</th>
+                            <th>Description</th>
+                            <th>GIF URL</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @if (Model.Characters != null && Model.Characters.Any())
+                        {
+                            @foreach (var characters in Model.Characters)
+                            {
+
+                                <tr>
+                                    <td>@characters.CharacterId</td>
+                                    <td>@characters.Name</td>
+                                    <td>@characters.Category</td>
+                                    <td>@characters.Description</td>
+                                    <td>@characters.URLGif</td>
+                                    <td>
+
+                                        <a asp-action="DetailStoryPlot" asp-route-id="@characters.CharacterId" class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye"></i> View</a>
+
+                                        @* opens a modal popup to make the changes *@
+                                        <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1"
+                                                data-bs-toggle="modal"
+                                                data-bs-target="#editCharacterModal"
+                                                data-id="@characters.CharacterId"
+                                                data-fk="@characters.WikiId"
+                                                data-name="@characters.Name"
+                                                data-category="@characters.Category"
+                                                data-description="@characters.Description"
+                                                data-url="@characters.URLGif">
+                                            <i class="fa-solid fa-pen-to-square"></i> Edit
+                                        </button>
+
+
+                                        <form class="d-inline" id="deleteForm-@characters.CharacterId" method="post" asp-action="DeleteCharacter" asp-route-id="@characters.CharacterId">
+                                            <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1" onclick="confirmDelete(event, 'deleteForm-@characters.CharacterId')"><i class="fa-solid fa-trash"></i> Delete</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+
+            </div>
+
+
+        </div>
+        <!--add-->
+        <div class="tab-pane fade" id="tab2" role="tabpanel">
+            
+            <div class="formcont container p-4 shadow-sm rounded-3 mb-5">
+                <form id="characterForm" method="post" asp-controller="Wiki" asp-action="CreateCharacter" onsubmit="confirmSubmit(event)">
+                    <div>
+                        <label asp-for="NewCharacter.Name" class="form-label">Name <span class="reqsymbol">*</span></label>
+                        <input type="text" asp-for="NewCharacter.Name" class="form-control mb-3 focus-ring" required />
+                    </div>
+                    <div>
+                        <label asp-for="NewCharacter.Description" class="form-label">Description <span class="reqsymbol">*</span></label>
+                        <textarea asp-for="NewCharacter.Description" class="form-control mb-3 focus-ring" rows="3" required></textarea>
+                    </div>
+                    <div>
+                        <label asp-for="NewCharacter.Category" class="form-label">Character Category <span class="reqsymbol">*</span></label>
+                        <select asp-for="NewCharacter.Category" class="form-control mb-3 focus-ring" required>
+                            <option value="">Select Category</option>
+                            <option value="Vendor">Vendor</option>
+                            <option value="Customer">Customer</option>
+                            <option value="Main Character">Main Character</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label asp-for="NewCharacter.URLGif" class="form-label">GIF URL</label>
+                        <input asp-for="NewCharacter.URLGif" class="form-control mb-3 focus-ring" placeholder="Enter GIF URL">
+                    </div>
+
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="addremovebtn focus-ring btn px-3">Submit</button>
+                    </div>
+                </form>
+
+            </div>
+
+
+        </div>
+
     </div>
-    <div>
-        <label asp-for="NewCharacter.Description"></label>
-        <textarea asp-for="NewCharacter.Description" class="form-control" rows="3" required></textarea>
-    </div>
-    <div>
-        <label asp-for="NewCharacter.Category"></label>
-        <select asp-for="NewCharacter.Category" class="form-control" required>
-            <option value="">Select Category</option>
-            <option value="Vendor">Vendor</option>
-            <option value="Customer">Customer</option>
-            <option value="Main Character">Main Character</option>
-        </select>
-    </div>
-    <div>
-        <label asp-for="NewCharacter.URLGif"></label>
-        <input asp-for="NewCharacter.URLGif" class="form-control" placeholder="One GIF link only (Optional):">
-    </div>
+</div>
 
-
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-
-<table class="table table-bordered table-hover table-striped">
-    <thead>
-        <tr>
-            <th>Story ID</th>
-            <th>Name</th>
-            <th>Category</th>
-            <th>Description</th>
-            <th>URL Gif</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.Characters != null && Model.Characters.Any())
-        {
-            @foreach (var characters in Model.Characters)
-            {
-
-                <tr>
-                    <td>@characters.CharacterId</td>
-                    <td>@characters.Name</td>
-                    <td>@characters.Category</td>
-                    <td>@characters.Description</td>
-                    <td>@characters.URLGif</td>
-                    <td>
-
-                        <a asp-action="DetailStoryPlot" asp-route-id="@characters.CharacterId" class="actionsbtn focus-ring btn btn-sm mb-1"><i class="fa-solid fa-eye fa-sm"></i>View</a>
-
-                        @* opens a modal popup to make the changes *@
-                        <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1"
-                                data-bs-toggle="modal"
-                                data-bs-target="#editCharacterModal"
-                                data-id="@characters.CharacterId"
-                                data-fk="@characters.WikiId"
-                                data-name="@characters.Name"
-                                data-category="@characters.Category"
-                                data-description="@characters.Description"
-                                data-url="@characters.URLGif">
-                            <i class="fa-solid fa-pen-to-square fa-sm"></i>
-                            Edit
-                        </button>
-
-
-                        <form class="d-inline" id="deleteForm-@characters.CharacterId" method="post" asp-action="DeleteCharacter" asp-route-id="@characters.CharacterId">
-                            <button type="button" class="actionsbtn focus-ring btn btn-sm mb-1" onclick="confirmDelete(event, 'deleteForm-@characters.CharacterId')"><i class="fa-solid fa-trash fa-sm"></i>Delete</button>
-                        </form>
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
 
 
 @* MODAL POPUP FOR EDITING RECORD *@
 <div class="modal fade" id="editCharacterModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header rounded-top-4">
                 <h5 class="modal-title">Edit Character</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <button type="button" class="btn-close btn-light" data-bs-dismiss="modal"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body py-3 px-4 rounded-bottom-4">
                 <form id="editCharacterForm" method="post" asp-action="EditCharacter">
                     <input type="hidden" id="characterId" name="CharacterId">
 
                     <div class="mb-3">
-                        <label class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" name="Name" required>
+                        <label class="form-label">Name <span class="reqsymbol">*</span></label>
+                        <input type="text" class="form-control focus-ring" id="name" name="Name" required>
                     </div>
-                    <div>
-                        <label>Character Category</label>
-                        <select id="category" name="Category" class="form-control" required>
+                    <div class="mb-3">
+                        <label class="form-label">Character Category <span class="reqsymbol">*</span></label>
+                        <select id="category" name="Category" class="form-control focus-ring" required>
                             <option value="">Select Category</option>
                             <option value="Vendor">Vendor</option>
                             <option value="Customer">Customer</option>
@@ -112,15 +146,17 @@
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">Description</label>
-                        <textarea class="form-control" id="description" name="Description" rows="8" required></textarea>
+                        <label class="form-label">Description <span class="reqsymbol">*</span></label>
+                        <textarea class="form-control focus-ring" id="description" name="Description" rows="8" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label class="form-label">URLGif</label>
-                        <textarea class="form-control" id="urlgif" name="URLGif" placeholder="One GIF link only (Optional):"></textarea>
+                        <label class="form-label">GIF URL</label>
+                        <textarea class="form-control focus-ring" id="urlgif" name="URLGif" ></textarea>
                     </div>
-
-                    <button type="submit" class="btn btn-primary">Save Changes</button>
+                    <div class="d-flex justify-content-end">
+                        <button type="submit" class="addremovebtn focus-ring btn px-3">Save Changes</button>
+                    </div>
+                    
                 </form>
             </div>
         </div>
@@ -137,8 +173,10 @@
                     text: "You can always delete or edit the record later.",
                     icon: "warning",
                     showCancelButton: true,
-                    confirmButtonColor: "#3085d6",
-                    cancelButtonColor: "#d33",
+                    background: "#f8f4f1",
+                    color: "#603f26",
+                    confirmButtonColor: "#603f26",
+                    cancelButtonColor: "#8D493A",
                     confirmButtonText: "Yes, submit it!"
                 }).then((result) => {
                     if (result.isConfirmed) {
@@ -156,8 +194,10 @@
                 text: "You won't be able to revert this!",
                 icon: "warning",
                 showCancelButton: true,
-                confirmButtonColor: "#3085d6",
-                cancelButtonColor: "#d33",
+                background: "#f8f4f1",
+                color: "#603f26",
+                confirmButtonColor: "#603f26",
+                cancelButtonColor: "#8D493A",
                 confirmButtonText: "Yes, delete it!"
             }).then((result) => {
                 console.log("Swal result:", result); // Debugging line
